k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: soc
  labels:
    app.kubernetes.io/part-of: soc-platform
    name: soc
